2026-06-01: [FEATURE] Add `Snake` widget.
2025-03-22: [BUGFIX] Fix `IWD` widget crashing when `padding` is `None`
2025-03-21: [BUGFIX] Check for existing dbus service name for `SnapCast` widget
2025-03-20: [BUGFIX] Better handling of connection errors for `SnapCast` widget
2025-03-08: [FEATURE] Add ability to switch streams/groups in `SnapCast` widget
2025-03-07: [RELEASE] v0.31.0 release - compatible with qtile 0.31.0
2025-03-07: [FEATURE] Add Mpris2 support to `SnapCast` widget
2025-02-22: [FEATURE] Add ability to stroke `PowerLineDecoration` shape 
2025-01-07: [RELEASE] v0.30.0 release - compatible with qtile 0.30.0
2025-01-02: [FEATURE] More methods for generating `PopupMenu` objects
2024-12-26: [BUGFIX] Fix control highlight border in popup toolkit
2024-12-23: [FEATURE] Add ability to mask icons in `StatusNotifier` widget
2024-12-11: [BREAKING CHANGE] `dbus-next` dependency has been replaced with `dbus-fast`. Update to latest qtile is also required.
2024-11-18: [BUGFIX] Fix square border for `AnalogueClock`
2024-11-14: [FEATURE] Enable support for vertical bars for `GroupBox2`
2024-11-03: [FEATURE] Add `ImageDecoration` for widgets
2024-10-19: [RELEASE] v0.29.0 release - compatible with qtile 0.29.0
2024-08-23: [FEATURE] Add `GradientDecoration` for widgets
2024-08-13: [RELEASE] v0.28.1 release - compatible with qtile 0.28.1
2024-08-11: [RELEASE] v0.28.0 release - compatible with qtile 0.28.0
2024-07-22: [FEATURE] Add ability to toggle visibility of groups in `GroupBox2` widget
2024-07-18: [BUGFIX] Fix volume widgets bug volume display triggered on opening apps using sound device
2024-07-16: [POST RELEASE] v0.27.0.post1 incorporates bugfix below. Still compatible with v0.27.0
2024-07-16: [BUGFIX] Fix bug where border decorations failed on x11 if user did not have wayland libraries installed
2024-07-12: [RELEASE] v0.27.0 release - compatible with qtile 0.27.0
2024-07-12: [BUGFIX] Fix bug where conditional border could resize window